--- a/AlexNet_classifier.ipynb
+++ b/AlexNet_classifier.ipynb
@@ -551,11 +551,11 @@
         "print(model)"
       ],
       "metadata": {
-        "id": "KbH-EtJA5yh3",
-        "outputId": "e80cb7b8-78af-459c-d3f9-6e4c42a555df",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KbH-EtJA5yh3",
+        "outputId": "e80cb7b8-78af-459c-d3f9-6e4c42a555df"
       },
       "execution_count": 21,
       "outputs": [
@@ -600,11 +600,11 @@
         "print(model.classifier)"
       ],
       "metadata": {
-        "id": "pjUdUy4kAvY5",
-        "outputId": "f14e6b30-51b6-406c-fe82-c34358d5f4d0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pjUdUy4kAvY5",
+        "outputId": "f14e6b30-51b6-406c-fe82-c34358d5f4d0"
       },
       "execution_count": 22,
       "outputs": [
@@ -631,11 +631,11 @@
         "!pip install torchsummary"
       ],
       "metadata": {
-        "id": "vEq0g8jUAvWK",
-        "outputId": "358a58c3-cb75-4549-b56f-d11ee892f6b7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vEq0g8jUAvWK",
+        "outputId": "358a58c3-cb75-4549-b56f-d11ee892f6b7"
       },
       "execution_count": 23,
       "outputs": [
@@ -655,11 +655,11 @@
         "summary(model, input_size=(3, 224, 224))"
       ],
       "metadata": {
-        "id": "Yb3Bns1QA20w",
-        "outputId": "eca95d6d-18b6-49e8-fbfb-6d2020dac0bd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Yb3Bns1QA20w",
+        "outputId": "eca95d6d-18b6-49e8-fbfb-6d2020dac0bd"
       },
       "execution_count": 24,
       "outputs": [
@@ -711,11 +711,11 @@
         "!pip install torchviz"
       ],
       "metadata": {
-        "id": "l4r9oCdFDC5e",
-        "outputId": "134ed8e4-9a55-4af3-85f9-3ab0c3ca967e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "l4r9oCdFDC5e",
+        "outputId": "134ed8e4-9a55-4af3-85f9-3ab0c3ca967e"
       },
       "execution_count": 26,
       "outputs": [
@@ -766,12 +766,12 @@
         "make_dot(y, params=dict(model.named_parameters())).render(\"model_architecture\", format=\"png\")"
       ],
       "metadata": {
-        "id": "bJKaR9IJC_8L",
-        "outputId": "6beaa279-b3b9-4748-c213-85dc3e7423bb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "bJKaR9IJC_8L",
+        "outputId": "6beaa279-b3b9-4748-c213-85dc3e7423bb"
       },
       "execution_count": 28,
       "outputs": [
@@ -869,12 +869,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "FhpQ4Ee2EE7M",
-        "outputId": "62782cfa-c492-4914-8493-474ddafc92b7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 646
-        }
+        },
+        "id": "FhpQ4Ee2EE7M",
+        "outputId": "62782cfa-c492-4914-8493-474ddafc92b7"
       },
       "execution_count": 32,
       "outputs": [
@@ -1055,7 +1055,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
@@ -1063,55 +1063,10 @@
         "id": "zz8AXpf3Yxqi"
       },
       "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "vscode": {
-          "languageId": "plaintext"
-        },
-        "id": "DsDE-lxHYxqi"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "WK4hGph9e-CN"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "S6YZsrbve9_c"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "6BFOtxJ-e98s"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "cuCI4IE-e96N"
-      },
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "# Salvar o modelo após o treinamento\n",
+        "torch.save(model.state_dict(), 'alexnet_acc81_weights.pth')"
+      ]
     }
   ],
   "metadata": {
