Add new class carcinoma basocelular dataset

--- a/AlexNet_classifier.ipynb
+++ b/AlexNet_classifier.ipynb
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {
     "id": "0M4Fga5JYxqh"
    },
@@ -792,6 +792,7 @@
     "        acc = accuracy_score(all_labels, all_predictions)\n",
     "        precision = precision_score(all_labels, all_predictions, average=\"macro\",)\n",
     "        recall = recall_score(all_labels, all_predictions, average=\"macro\",)\n",
+    "        roc_auc = roc_auc_score(all_labels, all_predictions)\n",
     "\n",
     "        # Criar a matriz de confusão\n",
     "        cm = confusion_matrix(all_labels, all_predictions)\n",
@@ -810,9 +811,10 @@
     "        mlflow.log_metric('accuracy', acc)\n",
     "        mlflow.log_metric('precision', precision)\n",
     "        mlflow.log_metric('recall', recall)\n",
+    "        mlflow.log_metric('roc_auc_score', roc_auc)\n",
     "        mlflow.log_param('num_classes', num_classes)\n",
     "        mlflow.log_artifact(\"AlexNet_Confusion_Matrix_Test_Set.png\")\n",
-    "        mlflow.pytorch.log_model(model, f'alexnet_acc_{acc:.2f}')\n",
+    "        mlflow.pytorch.log_model(model, f'alexnet_acc_{acc:.2f}_num_classes{num_classes}')\n",
     "            "
    ]
   },
@@ -891,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -921,7 +923,7 @@
     "        # Carrega o modelo AlexNet pré-treinado\n",
     "        self.alexnet = models.alexnet(pretrained=False)\n",
     "        self.alexnet.classifier[6] = nn.Linear(4096, 5)\n",
-    "        self.alexnet.load_state_dict(torch.load(f'model/alexnet_acc_{acc:.2f}_weights.pth'))\n",
+    "        self.alexnet.load_state_dict(torch.load(f'model/alexnet_acc_{acc:.2f}_num_classes{num_classes}_weights.pth'))\n",
     "\n",
     "        # Extrai as camadas convolucionais até a última camada de ativação desejada\n",
     "        self.features_conv = self.alexnet.features[:12]\n",
